fixed main page image distortion and screen size change issues

--- a/frontend/src/index.css
+++ b/frontend/src/index.css
@@ -237,35 +237,61 @@ body {
 } */
 
 /* home page/feed */
-.imgCont {
+/* .imgCont {
   display: grid;
   gap: 1rem;
   grid-template-columns: repeat(auto-fit, minmax(240px, 1fr));
   grid-auto-rows: 240px;
   margin: 10px;
+} */
+.imgCont {
+  display:flex;
+  justify-content: center;
+  flex-wrap: wrap;
+  margin: 10px;
 }
+
 .homeImages {
+  /* display: flex;
+  flex-direction: column;
+  justify-content: center;
+  align-items: center; */
+  box-shadow: rgba(3, 8, 20, 0.1) 0px 0.15rem 0.5rem;
+  width: 330px;
+  height: 240px;
+  border-radius: 3px;
+  /* transition: all 200ms; */
+  background-size: cover;
+  background-position: center;
+  overflow: hidden;
+  object-fit: cover;
+  margin: 10px;
+  /* padding: 5px; */
+}
+
+/* .homeImages {
   display: flex;
   flex-direction: column;
   justify-content: center;
   align-items: center;
   box-shadow: rgba(3, 8, 20, 0.1) 0px 0.15rem 0.5rem;
-  /* width: 200px;
-  height: 200px; */
-  width: 100%;
-  height: 100%;
-  /* padding: 5px; */
+  width: 330px;
+  height: 240px;
   border-radius: 3px;
   transition: all 300ms;
   background-size: cover;
   background-position: center;
   overflow: hidden;
-  /* margin:5px; */
-}
+  object-fit: cover;
+  margin:5px;
+} */
 
 .homeImages:hover {
   /* filter: grayscale(80%); */
-  padding: 2px;
+  /* padding: 2px; */
+  -moz-box-shadow: 0 0 5px black;
+  -webkit-box-shadow: 0 0 5px black;
+  box-shadow: 0 0 5px black;
 }
 
 
